# engine

./: Cargo.toml  README.md  renderdoc.sh
game/: Cargo.toml
game/src/: main.rs
gui/: Cargo.toml
gui/shader/: quad.glsl.frag  quad.glsl.vert
gui/src/: lib.rs
gui/src/font/: bdf.rs  mod.rs
gui/src/immediate/: mod.rs
gui/src/immediate/container/: mod.rs
input/: Cargo.toml
input/src/: lib.rs
mechaia/: Cargo.toml
mechaia/src/: lib.rs
model/: Cargo.toml
model/src/: gltf.rs  lib.rs
physics3d/: Cargo.toml
physics3d/src/: lib.rs  wheel.rs
render/: Cargo.toml  fragment.glsl  instance.glsl  vertex.glsl
render/shader/: instance.comp.glsl  pbr.frag.glsl  pbr.vert.glsl
render/src/: blockmap.rs  camera.rs  command.rs  descriptor.rs  lib.rs  material.rs  mesh.rs  queues.rs  render_pass.rs  swapchain.rs
render/src/draw/: closure.rs  function.rs  mod.rs
render/src/resource/: camera.rs  mesh.rs  mod.rs  texture.rs
render/src/resource/material/: pbr.rs
render/src/stage/: mod.rs  renderpass.rs
render/src/stage/standard3d/: compute.rs  descriptor.rs  graphics.rs  mod.rs
script/: Cargo.toml  README.md  _int.pil  const_str.pil  genpil_int.py  ieee754.pil  ieee754.pil.py  int.pil  std.pil  std.pil.py
script/Formats/: bp.txt
script/examples/: array.pil  group.pil  hello_world.pil  lambda.pil  union.pil
script/examples2/: group.pil  hello_world.pil  union.pil
script/src/: function.rs  lib.rs  program.rs  sys.rs  token.rs
script/src/executor/: mod.rs  wordvm.rs
script/src/optimize/: mod.rs
sound/: Cargo.toml
sound/src/: lib.rs
sound/src/mix/: envelope.rs  filter.rs  mod.rs  transform.rs  wave.rs
terrain/: Cargo.toml
util/: Cargo.toml
util/src/: bit.rs  lib.rs  soa.rs  str.rs
util/src/sync/: half.rs  mod.rs  spsc.rs
vehicle/: Cargo.toml
vehicle/src/: block.rs  connection_map.rs  lib.rs
voxel/common/: Cargo.toml
voxel/common/src/: lib.rs  query.rs  tree_map.rs
voxel/render/: Cargo.toml
voxel/render/shader/: voxel.pbr.vert.glsl
voxel/render/src/: compute.rs  graphics.rs  lib.rs
window/: Cargo.toml
window/src/: lib.rs
(+4 files in other folders)
