[package]
name = "mechaia_render"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.37.3"
ash-window = "0.12.0"
glam = "0.27.0"
gltf = "1.4.0"
raw-window-handle = "0.6.0"
old-raw-window-handle = { version = "0.5.0", package = "raw-window-handle" }
vk-mem = "0.3.0"
vk-shader-macros = "0.2.9"
util = { path = "../util", package = "mechaia_util" }
